# chronicle-sync

./: .dockerignore  .eslintrc.js  .eslintrc.json  .gitattributes  .gitignore  .openhands-instructions  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  LICENSE  PRIVACY.md  README.md  babel.config.json  cypress.config.js  jest.config.js  package-lock.json  package.json  playwright.ci.config.ts  playwright.config.ts  playwright.local.config.ts  playwright.sauce.config.ts  pnpm-lock.yaml  tsconfig.json  vitest.config.js  vitest.config.ts  webpack.config.js  webpack.dashboard.js  webpack.mui.js  webpack.worker.js  wrangler.dashboard.toml  wrangler.dashboard.toml.template  wrangler.pages.toml.template  wrangler.toml  wrangler.toml.template  wrangler.worker.toml.template
.github/workflows/: ci-cd.yml  ci.yml  cloudflare-pages.yml  cloudflare-worker.yml  combined.yml  (+10 more)
docs/: _config.yml  configuration.md  dashboard.md  deployment.md  error-reporting.md  github-actions-setup.md  index.html  index.md  screenshots.md.template  test-results.md  testing.md
scripts/: README.md  generate-wrangler-config.sh  run-integration-tests.sh  setup-aws.sh
tests/: extension.e2e.test.js  extension.e2e.test.ts  extension.test.js  setup.js  setup.test.js
worker/: dashboard.js  worker.js
worker_py/: .flake8  pyproject.toml  worker.py  wrangler.toml
worker_py/scripts/: deploy.sh  health_check.sh  install.sh  lint.sh  manage_release.sh  start_worker.sh  test.sh  verify_build.sh
worker_py/src/: __init__.py  main.py  storage.py  worker.py
worker_py/tests/: test_storage.py  test_worker.py
(+84 files in other folders)
